--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="0dp"/>
+        android:paddingTop="1dp"
+        android:divider="#f00"
+        android:dividerHeight="4dp"/>
 
     <!-- Empty view is only visible when the list has no items. -->
     <TextView
